adding version for bower

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "angi-file",
+  "version": "1.0.0",
   "description": "angi-file is a directive for angularjs to help you make a model for input file and validate for supported file formats.",
   "main": "index.js",
   "authors": [
